classDiagram
    class Document {
        *id*: TEXT, PK, not null
        *name*: TEXT, not null
        *uri_location*: TEXT, not null
        *status*: TEXT, FK JobStatus(name), not null
        *topic*: TEXT, FK Classification(name)
        *created*: TEXT, not null
        *updated*: TEXT, not null
    }

    class Status {
        *name*: TEXT, PK, not null
        *description*: TEXT
    }

    class JobStatus {
        *name*: TEXT, PK, not null
        *description*: TEXT
    }

    class Classification {
        *name*: TEXT, PK, not null
        *parent_name*: TEXT, FK Classification(name)
        *description*: TEXT
    }

    class Tag {
        *name*: TEXT, PK, not null
        *end_date*: TEXT
        *description*: TEXT
    }

    class DocumentTag {
        *document_id*: TEXT, FK Document(id), not null
        *tag_name*: TEXT, FK Tag(name), not null
        *PK*: (document_id, tag_name)
    }

    class Job {
        *id*: TEXT, PK, not null
        *job_type*: TEXT, FK JobType(name), not null
        *document_id*: TEXT, FK Document(id)
        *status*: TEXT, FK JobStatus(name), not null
        *start_date*: TEXT
        *end_date*: TEXT
        *created*: TEXT, not null
    }

    class JobType {
        *name*: TEXT, PK, not null
        *description*: TEXT
    }

    class JobFile {
        *id*: INTEGER, PK, not null
        *job_id*: TEXT, FK Job(id), not null
        *name*: TEXT, not null
        *path*: TEXT, not null
        *mime_type*: TEXT
        *directory*: TEXT
        *status*: TEXT
        *lock_by_PID*: TEXT
    }

    JobStatus --> Document : status
    Classification --> Document : topic
    Classification --> Classification : parent_name
    JobType --> Job : job_type
    Document --> DocumentTag : document_id
    Tag --> DocumentTag : tag_name
    JobStatus --> Job : status
    Document --> Job : document_id
    Job --> JobFile : job_id
